# advent_code_2022

./: answer.py  day1_exo1.py  day1_exo2.py  day2_exo1.py  day2_exo2.py  pyproject.toml  utils.py
days/: __init__.py  utils.py
days/day1/: __init__.py  day1_exo1.py  day1_exo2.py
days/day2/: __init__.py  day2_exo1.py  day2_exo2.py
days/day3/: __init__.py  day3_exo1.py  day3_exo2.py
days/day4/: __init__.py  day4_exo1.py  day4_exo2.py
