[tool.poetry]
name = "advent-code-2022"
version = "0.1.0"
description = ""
authors = ["ulysse <ulysse.chosson@obspm.fr>"]
readme = "README.md"
packages = [{include = "advent_code_2022"}]

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
